@@ -236,10 +236,11 @@ Example : create item Longsword@an orc\n\r\
 Example : create StdExit east\n\r\
 Example : create news\n\r\
 Short(s): \n\r\
-A command for the creation of an exit, item, quest, faction, component, government, holiday, \
-clan, mob, race, mixedrace, ability, language, craftskill, help/ahelp, achievement, manufacturer, \
-allqualify, class, poll, debugflag, webserver, disableflag, enableflag, news, user, trap, \
-wrightskill, gatherskill, or room. \
+A command for the creation of an EXIT, ITEM, QUEST, FACTION, COMPONENT, GOVERNMENT, HOLIDAY, \
+CLAN, MOB, RACE, MIXEDRACE, ABILITY, LANGUAGE, CRAFTSKILL, HELP/AHELP, \
+ACHIEVEMENT, MANUFACTURER, ALLQUALIFY, CLASS, POLL, DEBUGFLAG, \
+WEBSERVER, DISABLEFLAG, ENABLEFLAG, NEWS, USER, TRAP, WRIGHTSKILL, \
+GATHERSKILL, CRON, TITLE, AWARD, or ROOM. \
 Enter CREATE or CREATE X for more information on command usage. \
 Use AHELP QUESTS for more information on creating quests.  
 
@@ -251,8 +252,11 @@ Example : destroy orc\n\r\
 Example : destroy item longsword\n\r\
 Example : destroy item longsword@an orc\n\r\
 Short(s): \n\r\
-A command for the destruction of items, quests, components, planes, mobs, rooms, exits, polls, classes, races, \
-and listed bugs, typos, ideas, and ban. \
+A command for the destruction of EXIT, ITEM, AREA, USER, MOB, QUEST, FACTION, \
+SESSION, TICKS, THREAD, HOLIDAY, JOURNAL, SOCIAL, ACHIEVEMENT, CLASS, ABILITY, MANUFACTURER, \
+LANGUAGE, COMPONENT, RACE, EXPERTISE, TITLE, CLAN, BAN, GOVERNMENT, NOPURGE, BUG, TYPO, IDEA, \
+WEBSERVER, POLL, DEBUGFLAG, DISABLEFLAG, ENABLEFLAG, CRAFTSKILL, GATHERSKILL, CRON, \
+TRAP, WRIGHTSKILL, AWARD, DELETE: (MQL), or a ROOM. \
 Enter DESTROY for more information on command usage.
 	
 DEVIATIONS=\
@@ -1353,10 +1357,11 @@ Example : modify item "longsword@an orc"\n\r\
 Example : modify jscript\n\r\
 Example : modify news\n\r\
 Short(s): \n\r\
-A command for the modification of an item, race, class, ability, language, craftskill, \
-gatherskill, wrightskill, allqualify, area, exit, component, recipe, expertise, title, \
-quest, mob, user, holiday, achievement, manufacturer, help/ahelp, trap, government, \
-jscript, faction, social, clan, poll, news, day, month, year, time, hour, update:, or room. \
+A command for the modification of an ITEM, RACE, CLASS, ABILITY, LANGUAGE, CRAFTSKILL, GATHERSKILL, WRIGHTSKILL, \
+ALLQUALIFY, AREA, EXIT, COMPONENT, RECIPE, EXPERTISE, QUEST, \
+MOB, USER, HOLIDAY, ACHIEVEMENT, MANUFACTURER, HELP/AHELP, TRAP, CRON, \
+GOVERNMENT, JSCRIPT, FACTION, SOCIAL, CLAN, POLL, NEWS, DAY, MONTH, YEAR, \
+TIME, HOUR, UPDATE: (MQL), or ROOM. \
 Enter MODIFY or MODIFY X for more information on command usage.
 	
 I3=\
