@@ -410,8 +410,11 @@ to select existing objects in the game, or the properties of existing objects.  
 \n\r\
 The structure of MQL is similar to SQL in that all MQL statements are of this structure:\n\r\
 \n\r\
-SELECT: [property, property, ..] FROM [object set]  WHERE [object comparison, object comparison]\n\r\
+SELECT: [property, property, ..] FROM [object set]  WHERE [object comparison (logic) object comparison]\n\r\
 * note the colon : after the word SELECT above.\n\r\
+UPDATE: [object set] SET [property=value, ...] WHERE [object comparison (logic) object comparison]\n\r\
+DELETE: from [object set] WHERE [object comparison (logic) object comparison]\n\r\
+* note the colon : after the words SELECT, UPDATE, DELETE above.\n\r\
 \n\r\
 The SELECT clause defines the properties you wish to be returned from the MQL statement.\n\r\
 The FROM clause defines the set of objects that you might want to return the properties of.\n\r\
@@ -422,8 +425,16 @@ A FROM clause can be a simple world set term, such as one of the following:\n\r\
     * A CMFS file path to a CMARE file, such as ::/resources/map/plains.cmare\n\r\
     * AREAS to use the set of all world areas\n\r\
     * ROOMS to use the set of all existing world rooms\n\r\
-    * MOBS to use the set of all existing world mobs\n\r\
+    * NPROOMS to use the set of non-property (Prop_RoomForSale) rooms.\n\r\
+    * ORPHROOMS to use the set of rooms without a link into them.\n\r\
+    * MOBS to use the set of all existing world mobs and player mobs\n\r\
+    * NPCS to use the set of all existing world npc mobs\n\r\
     * ITEMS to use the set of all existing world items\n\r\
+    * PLAYERS to use the set of player mobs.\n\r\
+    * RESOURCES to use the set of resource items.\n\r\
+    * FACTIONS to use the set of game factions.\n\r\
+    * RACES to use the set of game races.\n\r\
+    * SHOPS to use the set of shopkeepers.\n\r\
     * In case where a qualifying object is implied, AREA can be used to refer to that specific area.\n\r\
     * Another SELECT: statement in parenthesis, such as: SELECT: name from (SELECT * from AREA)\n\r\
 \n\r\
@@ -437,11 +448,26 @@ term, whether it be simple, or a narrowing term.\n\r\
 The following are useful narrowing terms:\n\r\
 \n\r\
     * AREAS to use the unique set of areas in which the prior term is located\n\r\
+    * AREA to refer to the area where the prior term is located\n\r\
     * ROOMS to use the unique set of rooms in which the prior term is located, or which the prior term contains\n\r\
+    * ROOM to use the room in which the prior term is located.\n\r\
     * MOBS, MOB to use the set of all mobs contained in the prior term\n\r\
     * ITEMS, ITEM to use the set of all items contained in the prior term\n\r\
     * OWNER to use the set of all item owners of the prior term, if it was items\n\r\
     * EQUIPMENT to use the set of all  worn items of the prior term\n\r\
+    * SHOPITEMS to use the set of shopkeeper items\n\r\
+    * EXITS to use the set of applicable exits\n\r\
+    * PLAYER to use the player npc applicable\n\r\
+    * MOB to use the mob object applicable\n\r\
+    * NPC to use the npc mob object applicable\n\r\
+    * ITEM to use the item object applicable\n\r\
+    * EQUIPMENT to use the equipment item applicable\n\r\
+    * OWNER to use the item owner object for a prior item term\n\r\
+    * ABILITIES to use the list of abilities for the prior term\n\r\
+    * PROPERTIES to use the list of Property effects for the prior term\n\r\
+    * EFFECTS to use the list of effects for the prior term\n\r\
+    * BEHAVIORS to use the list of behaviors for the prior term\n\r\
+    * SHOP to use the shop object for the prior term\n\r\
 \n\r\
 Be careful when using narrowing terms to make sure they make sense for the term prior to them.  For example, if \
 importing mobs from a cmare file, AREAS will not likely resolve to anything, since the mobs aren't in the world yet.\n\r\
@@ -479,6 +505,8 @@ separated from the property term by a backslash \\.  The value aggregating prefi
     * MEAN to return the mean value of all the property terms in the existing result set\n\r\
     * COUNT to return the count of the number of  items in the result set\n\r\
     * UNIQUE to include only one row where the property is of any given value\n\r\
+    * FIRST to include only the first row\n\r\
+    * ANY to include only a random row\n\r\
 \n\r\
 For example, to quickly count the mobs in your game, you might enter SELECT: COUNT\\* from AREAS\\MOBS\n\r\
 \n\r\
